[package]
name = "bip110-packer"
version = "0.2.0"
edition = "2021"
description = "Pack a Bitcoin block with BIP-110-compliant arbitrary data — Taproot tapscript packing plus six other encoding channels and optional DEFLATE compression"
license = "MIT"
repository = "https://github.com/MonumentalSystems/bip110-packer"
readme = "README.md"
keywords = ["bitcoin", "bip110", "taproot", "ordinals", "data"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
# secp256k1 is re-exported as bitcoin::secp256k1 (v0.29.x) — do NOT depend on it separately.
# No RNG needed: the internal key is derived from fixed bytes, so default features suffice.
bitcoin = { version = "0.32", features = ["std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
# Pure-Rust DEFLATE (no C toolchain) for the optional compression pre-pass.
miniz_oxide = "0.8"

[lib]
name = "bip110_packer"
path = "src/lib.rs"

[[bin]]
name = "bip110-packer"
path = "src/main.rs"

[profile.release]
opt-level = 2
